# ROS2

./: .gitignore  README.md  sudo apt install gh  sudo apt install gh.pub
src/gazebo_tutorial/: CMakeLists.txt  package.xml  setup.py
src/gazebo_tutorial/config/: joint_controller.yaml  teslabot.rviz
src/gazebo_tutorial/gazebo_tutorial/: joint_publisher.py
src/gazebo_tutorial/launch/: display.launch.py  gazebo.launch.py
src/gazebo_tutorial/meshes/: .gitkeep
src/gazebo_tutorial/rviz/: teslabot.rviz
src/gazebo_tutorial/scripts/: joint_publisher.py
src/gazebo_tutorial/urdf/: teslabot.urdf.xacro
src/my_package/: package.xml
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  rsp.launch.py
src/my_robot_description/rviz/: robot.rviz
src/my_robot_description/urdf/: simple-joint.urdf  simple-joint.urdf.xacro
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
src/urdf_tutorial_r2d2/: package.xml  setup.py
src/urdf_tutorial_r2d2/launch/: demo.launch.py  display_demo.launch.py
src/urdf_tutorial_r2d2/urdf_tutorial_r2d2/: state_publisher.py
